Added possibility to exclude dc from fallback